# seL4-sample-converter

./: .gitignore  Cargo.toml  Makefile  README.md  main.c  perf.data.old  perf.h  report_out  run.sh  sample.h  types.h
samples/: a copy.json  a.json  symbolstuff.json
src/: lib.rs  main.rs  sample.rs  sample_parser.rs
src/perf/: attributes.rs  events.rs  features.rs  file_section.rs  header.rs  header_flags.rs  mod.rs
