[package]
name = "sample_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
bytemuck = { version = "1.14.0", features = ["bytemuck_derive", "derive"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
